[package]
name = "currency_requester"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
serde_json = "*"
serde = "*"
reqwest = "*"
time = "*"
tokio = {version = "1.0", features = ["rt-multi-thread", "time", "fs", "macros", "net"]}
tokio-stream = {version = "0.1", features = ["net"]}
flume = "0.11.1"
ndarray = "0.16.1"

[lib]
name = "t_requester"
crate-type = ["cdylib"]

[build-dependencies]
cbindgen = "0.29.2"